2012-07-26  Stéphane Marguet (Stemp) <smarguet@gmail.com>
	* update to 4.2.0 v20120721043402

2012-07-25  Stéphane Marguet (Stemp) <smarguet@gmail.com>
	* update to 4.2.0 v20120721043402 RC2

2012-01-14  Stéphane Marguet (Stemp) <smarguet@gmail.com>
	* update to 3.7.0 v20111128043401

2011-12-21  Stéphane Marguet (Stemp) <smarguet@gmail.com>
	* update to 3.7.0