@@ -1,0 +1,43 @@
+# Maintainer: killown <archlinux@killown.com>
+
+pkgname=cherrytree-hg
+pkgver=0.28.5
+pkgrel=1
+pkgbasever=0.28
+_hgroot="https://code.google.com/p/giuspen-cherrytree/"
+_hgname="hg_cherrytree"
+makedepends=()
+conflicts=()
+replaces=()
+backup=()
+conflicts=('cherrytree')
+pkgdesc="A hierarchical note taking application, featuring rich text and syntax highlighting, storing data in a single xml or sqlite file."
+url="http://www.giuspen.com/cherrytree/"
+arch=('any')
+license=('GPL')
+install='cherrytree-hg.install'
+md5sums=()
+depends=(pygtksourceview2  hicolor-icon-theme  desktop-file-utils mercurial)
+
+build() {
+    if [ -d ${srcdir}/$pkgname ] ; then
+        hg clone $_hgroot $_hgname
+    else
+        cd "${srcdir}/$_hgname"
+        hg pull -u
+    fi
+    
+    cd "${srcdir}/$_hgname"
+    # python2 fix
+        for file in $(find . -name '*.py') cherrytree; do
+                echo "Applying python2 fix for ${file}"
+                sed -i 's_/usr/bin/env python_/usr/bin/env python2_' ${file}
+        done
+
+}
+ 
+package() {
+	cd "${srcdir}/$_hgname"
+  	python2 setup.py install --root=$pkgdir/ --optimize=1
+}
+
