@@ -1,0 +1,7 @@
+post_install() {
+	update-desktop-database -q
+}
+
+post_remove() {
+	update-desktop-database -q
+}
