@@ -3,7 +3,7 @@
 pkgname=eclipse-i18n-fr
 pkgver=4.2.0
 _pkgbuild=v20121120043402
-pkgrel=3
+pkgrel=4
 pkgdesc="French language for eclipse IDE"
 url="http://babel.eclipse.org/"
 arch=('any')
@@ -12,7 +12,7 @@ changelog=ChangeLog
 depends=('eclipse')
 makedepends=('unzip')
 conflicts=('eclipse-i18n-fr-pack')
-source=("http://eclipse.ialto.com/technology/babel/babel_language_packs/R0.10.0/juno/BabelLanguagePack-eclipse-fr_${pkgver}.${_pkgbuild}.zip")
+source=("http://eclipse.ialto.com/technology/babel/babel_language_packs/R0.10.1/juno/BabelLanguagePack-eclipse-fr_${pkgver}.${_pkgbuild}.zip")
 sha256sums=('7dbc3ffc82cca3cc5103fdc5422394ecf6f1a06ab27e21e15700b54c76acbb66')
 
 build() {
