@@ -1,0 +1,21 @@
+# Maintainer: Axilleas Pipinellis <axilleas@archlinux.info>
+
+pkgname=python2-pythondialog
+_pkgname=pythondialog
+pkgver=2.7
+pkgrel=1
+pkgdesc="A Python interface to the UNIX dialog utility and mostly-compatible programs"
+arch=('any')
+url="http://pythondialog.sourceforge.net/"
+license=('LGPL')
+depends=('python2')
+makedepends=('python2-distribute')
+source=("http://pypi.python.org/packages/source/p/$_pkgname/$_pkgname-$pkgver.tar.gz")
+md5sums=("9a1f1255934c3dd5cdd1bd10086b7c36")
+
+package() {
+  cd "$srcdir/$_pkgname-$pkgver"
+  python2 setup.py install --root="$pkgdir/" --optimize=1
+}
+
+# vim:set ts=2 sw=2 et:
