@@ -1,9 +1,9 @@
 # Maintainer: afettouhi <A.Fettouhi@gmail.com>
 
 pkgname=vessel
-pkgver=20121218
+pkgver=20121219
 _pkgver=12082012
-pkgrel=3
+pkgrel=1
 pkgdesc="Vessel is a physics-based, steampunk puzzle-platform video game developed by Strange Loop Games."
 url="http://www.strangeloopgames.com/"
 license=('custom')
@@ -16,11 +16,11 @@ else
     depends=('sdl' 'openal' 'bash' 'gcc-libs')
     optdepends=('libtxc_dxtn: texture decoding for open source ATI and Intel drivers')
 fi
-source=("http://www.flibitijibibo.com/patch/vessel/linux-12182012.tar.gz"
+source=("http://www.flibitijibibo.com/patch/vessel/linux-12192012.tar.gz"
         "${pkgname}.install"
         "${pkgname}.desktop"
         "${pkgname}.sh")
-md5sums=("7b29418949e442ac52ecf81bd264bc59"
+md5sums=("10fd5d8e6e30f3db9e7487c35e435126"
          "b25345577b44fbeeba96c6cc87f11c1e"
          "6057700248d5796056b1096962d53877"
          "174d23fe24b496e2cdda1d136327174e")
@@ -30,14 +30,13 @@ PKGEXT=".pkg.tar"
 
 package() {
   mkdir -p "${pkgdir}/opt/games/${pkgname}"
-  [[ -f "$LOCAL_PACKAGE_SOURCES" ]] ||
-    error "Place the game or a symlink to the game in ${startdir}"
-  unzip -u "$LOCAL_PACKAGE_SOURCES" -d "${pkgdir}/opt/games/${pkgname}" || true
+  _get_local_source "${pkgname}-${_pkgver}-bin" || error "Unable to find the game archive"; exit 1
+  unzip -u "${srcdir}/${pkgname}-${_pkgver}-bin" -d "${pkgdir}/opt/games/${pkgname}" || true
   rm -rf "${pkgdir}/opt/games/${pkgname}/data/x86"
   rm "${pkgdir}/opt/games/${pkgname}/data/Linux.README"
   rm "${pkgdir}/opt/games/${pkgname}/data/Vessel"
   rm "${pkgdir}/opt/games/${pkgname}/data/Vessel.bmp"
-  tar -zxvf linux-12182012.tar.gz -C "${pkgdir}/opt/games/${pkgname}/data/"
+  tar -zxvf linux-12192012.tar.gz -C "${pkgdir}/opt/games/${pkgname}/data/"
   find "${pkgdir}" -type f -exec chmod 644 "{}" +
   install -Dm644 "${pkgname}".desktop "${pkgdir}/usr/share/applications/${pkgname}.desktop"
   install -Dm755 "${pkgname}".sh "${pkgdir}/usr/bin/${pkgname}"
@@ -59,5 +58,3 @@ _get_local_source() {
   done
   if [ ! -e "$srcdir/$1" ]; then return 1; fi
 }
-
-# vim: ft=PKGBUILD sts=2 ts=2 sw=2 et
