@@ -1,3 +1,9 @@
+2012-12-20  Stéphane Marguet (Stemp) <smarguet@gmail.com>
+	* fix R0.10.1 in source location
+
+2012-12-17  Stéphane Marguet (Stemp) <smarguet@gmail.com>
+	* update to 4.2.0 v20121120043402
+
 2012-07-26  Stéphane Marguet (Stemp) <smarguet@gmail.com>
 	* update to 4.2.0 v20120721043402
 
